# team-hack

./: .gitignore  README.md  pyproject.toml
hackion/: __init__.py  app.py  battery.py  map.py  vehicle.py
projectname/: __init__.py  util.py
projectname/parameters/: mycell.py
