[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "hackion"
authors = [
    {name = "IonWorks Technologies Inc.", email = "info@ionworks.com"},
]
description = "Hackathon for team building"
dynamic = ["version", "readme"]
requires-python = ">=3.10,<3.12"
dependencies = [
    "pybamm",
]

[tool.setuptools_scm]

[tool.setuptools.packages.find]
include = ["hackion"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
